--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,8 +10,8 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
-
+    runs-on: self-hosted
+    
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
